--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -14,3 +14,12 @@ services:
       - PROXY_HOST=warp
       - PROXY_PORT=1080
     restart: always
+    networks:
+      - app_network
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4
+
+networks:
+  app_network:
+    driver: bridge
