--- a/package.json
+++ b/package.json
@@ -12,8 +12,15 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@coinbase/onchainkit": "^0.35.5",
+    "@rainbow-me/rainbowkit": "^2.2.0",
+    "@tanstack/react-query": "^5.60.5",
+    "@wagmi/connectors": "^5.4.0",
+    "@wagmi/core": "^2.14.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "viem": "2.x",
+    "wagmi": "^2.12.33"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
