Create instances of bots instead of one single bot

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,12 +2,15 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
+RUN apt-get update && apt-get install -y \
+    gcc \
+    && rm -rf /var/lib/apt/lists/*
+
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+COPY src/ /app/src/
 
-COPY src/ src/
-
-ENV PYTHONPATH=/app:$PYTHONPATH
+ENV PYTHONPATH=/app
 
 EXPOSE 8000
 
