--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
 aiohappyeyeballs==2.4.0
-aiohttp==3.11.2
+aiohttp
 aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.6.2.post1
@@ -91,4 +91,4 @@ urllib3==2.2.3
 uvicorn==0.32.0
 web3==7.2.0
 websockets==13.0.1
-yarl==1.17.1
+yarl==1.11.1
