--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,14 +4,22 @@ WORKDIR /app
 
 RUN apt-get update && apt-get install -y \
     gcc \
+    postgresql-client \
     && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+
 COPY src/ /app/src/
+COPY migrations/ /app/migrations/
 
 ENV PYTHONPATH=/app
 
 EXPOSE 8000
 
+# Add entrypoint script
+COPY docker-entrypoint.sh /docker-entrypoint.sh
+RUN chmod +x /docker-entrypoint.sh
+
+ENTRYPOINT ["/docker-entrypoint.sh"]
 CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
