--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,12 @@
 aiohappyeyeballs==2.4.0
-aiohttp
+aiohttp==3.10.5
 aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.6.2.post1
 asn1crypto==1.5.1
 async-timeout==4.0.3
 attrs==24.2.0
+beautifulsoup4==4.12.3
 bip-utils==2.9.3
 bitarray==2.9.2
 cbor2==5.6.4
@@ -51,16 +52,23 @@ langchain-openai==0.2.8
 langchain-text-splitters==0.3.2
 langgraph==0.2.50
 langgraph-checkpoint==2.0.4
+langgraph-checkpoint-postgres==2.0.2
 langgraph-sdk==0.1.36
 langsmith==0.1.143
+lxml==5.3.0
 msgpack==1.1.0
 multidict==6.1.0
+ntscraper==0.3.17
 numpy==1.26.4
 openai==1.54.4
 orjson==3.10.11
+outcome==1.3.0.post0
 packaging==24.2
 parsimonious==0.10.0
 propcache==0.2.0
+psycopg==3.2.3
+psycopg-pool==3.2.4
+psycopg2-binary==2.9.9
 py-sr25519-bindings==0.2.0
 pycparser==2.22
 pycryptodome==3.20.0
@@ -68,6 +76,7 @@ pydantic==2.9.2
 pydantic_core==2.23.4
 PyJWT==2.9.0
 PyNaCl==1.5.0
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pyunormalize==16.0.0
@@ -76,19 +85,28 @@ regex==2024.9.11
 requests==2.32.3
 requests-toolbelt==1.0.0
 rlp==4.0.1
+selenium==4.26.1
 sgmllib3k==1.0.0
 six==1.16.0
 sniffio==1.3.1
-SQLAlchemy==2.0.36
+sortedcontainers==2.4.0
+soupsieve==2.6
+SQLAlchemy==2.0.27
 starlette==0.41.2
 tenacity==9.0.0
 tiktoken==0.8.0
 toolz==0.12.1
 tqdm==4.67.0
+trio==0.27.0
+trio-websocket==0.11.1
 types-requests==2.32.0.20240914
 typing_extensions==4.12.2
 urllib3==2.2.3
 uvicorn==0.32.0
 web3==7.2.0
+webdriver-manager==4.0.2
+websocket-client==1.8.0
 websockets==13.0.1
+wsproto==1.2.0
 yarl==1.11.1
+asyncpg==0.29.0
