--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,8 +3,19 @@ FROM python:3.11-slim
 WORKDIR /app
 
 RUN apt-get update && apt-get install -y \
+    curl \
+    gnupg \
     gcc \
     postgresql-client \
+    && rm -rf /var/lib/apt/lists/*
+
+# Install Node.js
+RUN mkdir -p /etc/apt/keyrings \
+    && curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg \
+    && echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_20.x nodistro main" | tee /etc/apt/sources.list.d/nodesource.list \
+    && apt-get update \
+    && apt-get install -y nodejs \
+    && npm install -g yarn \
     && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt .
@@ -12,6 +23,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY src/ /app/src/
 COPY migrations/ /app/migrations/
+
+COPY xmtp-message-kit /app/xmtp-app
+RUN cd /app/xmtp-app && yarn && cd ..
 
 ENV PYTHONPATH=/app
 
