--- a/backend/xmtp-message-kit/package.json
+++ b/backend/xmtp-message-kit/package.json
@@ -4,16 +4,18 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "yarn build && node dist/index.js",
     "dev": "tsc && node dist/index.js",
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@xmtp/message-kit": "latest"
+    "@xmtp/message-kit": "latest",
+    "ethers": "^6.13.4",
+    "tsc": "^2.0.4"
   },
   "devDependencies": {
     "@types/node": "latest",
-    "typescript": "latest"
+    "typescript": "^5.6.3"
   },
   "engines": {
     "node": ">=20"
